--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=nlink-ui
+application.vendor=Javier Marrero
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,21 @@ dist.jar=${dist.dir}/nlink-ui.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/nlink-ui
+endorsed.classpath=
 excludes=
+file.reference.flatlaf-1.2.jar=lib/flatlaf-1.2.jar
+file.reference.flatlaf-intellij-themes-1.2.jar=lib/flatlaf-intellij-themes-1.2.jar
+file.reference.flexdock-1.2.4.jar=lib/flexdock-1.2.4.jar
+file.reference.slf4j-api-1.7.9.jar=lib/slf4j-api-1.7.9.jar
+file.reference.slf4j-jdk14-1.7.9.jar=lib/slf4j-jdk14-1.7.9.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.flatlaf-1.2.jar}:\
+    ${file.reference.flatlaf-intellij-themes-1.2.jar}:\
+    ${file.reference.flexdock-1.2.4.jar}:\
+    ${file.reference.slf4j-api-1.7.9.jar}:\
+    ${file.reference.slf4j-jdk14-1.7.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,8 +56,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=19
-javac.target=19
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
