--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -83,7 +83,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=nlink-ui
-main.class=main.Nlink
+main.class=cu.edu.cujae.ceis.nlink.ui.launch.Launcher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
