Añadidas nuevas interfaces.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ excludes=
 file.reference.flatlaf-1.2.jar=lib/flatlaf-1.2.jar
 file.reference.flatlaf-intellij-themes-1.2.jar=lib/flatlaf-intellij-themes-1.2.jar
 file.reference.flexdock-1.2.4.jar=lib/flexdock-1.2.4.jar
+file.reference.nlink-logic.jar=lib/nlink-logic.jar
 file.reference.slf4j-api-1.7.9.jar=lib/slf4j-api-1.7.9.jar
 file.reference.slf4j-jdk14-1.7.9.jar=lib/slf4j-jdk14-1.7.9.jar
 includes=**
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.flatlaf-intellij-themes-1.2.jar}:\
     ${file.reference.flexdock-1.2.4.jar}:\
     ${file.reference.slf4j-api-1.7.9.jar}:\
-    ${file.reference.slf4j-jdk14-1.7.9.jar}
+    ${file.reference.slf4j-jdk14-1.7.9.jar}:\
+    ${file.reference.nlink-logic.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -88,6 +90,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=gpl30
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
