--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/nlink-ui
 endorsed.classpath=
 excludes=
+file.reference.commons-configuration2-2.7.jar=lib/commons-configuration2-2.7.jar
+file.reference.commons-lang3-3.12.0.jar=lib/commons-lang3-3.12.0.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.commons-text-1.9.jar=lib/commons-text-1.9.jar
 file.reference.flatlaf-1.2.jar=lib/flatlaf-1.2.jar
 file.reference.flatlaf-intellij-themes-1.2.jar=lib/flatlaf-intellij-themes-1.2.jar
 file.reference.flexdock-1.2.4.jar=lib/flexdock-1.2.4.jar
-file.reference.nlink-logic.jar=lib/nlink-logic.jar
+file.reference.jlibgraph.jar=lib/jlibgraph.jar
 file.reference.slf4j-api-1.7.9.jar=lib/slf4j-api-1.7.9.jar
 file.reference.slf4j-jdk14-1.7.9.jar=lib/slf4j-jdk14-1.7.9.jar
 includes=**
@@ -49,7 +53,12 @@ javac.classpath=\
     ${file.reference.flexdock-1.2.4.jar}:\
     ${file.reference.slf4j-api-1.7.9.jar}:\
     ${file.reference.slf4j-jdk14-1.7.9.jar}:\
-    ${file.reference.nlink-logic.jar}
+    ${reference.nlink-logic.jar}:\
+    ${file.reference.jlibgraph.jar}:\
+    ${file.reference.commons-configuration2-2.7.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${file.reference.commons-text-1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,6 +84,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-configuration2-2.7.jar=lib/commons-configuration2-2.7-javadoc.jar
+javadoc.reference.commons-logging-1.2.jar=lib/commons-logging-1.2-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -91,6 +102,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.license=gpl30
+project.nlink-logic=../nlink-logic
+reference.nlink-logic.jar=${project.nlink-logic}/dist/nlink-logic.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -106,5 +119,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.commons-configuration2-2.7.jar=lib/commons-configuration2-2.7-sources.jar
 src.dir=src
 test.src.dir=test
