--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.flatlaf-1.2.jar=lib/flatlaf-1.2.jar
 file.reference.flatlaf-intellij-themes-1.2.jar=lib/flatlaf-intellij-themes-1.2.jar
 file.reference.flexdock-1.2.4.jar=lib/flexdock-1.2.4.jar
 file.reference.jlibgraph.jar=lib/jlibgraph.jar
+file.reference.nlink-logic.jar=lib/nlink-logic.jar
 file.reference.slf4j-api-1.7.9.jar=lib/slf4j-api-1.7.9.jar
 file.reference.slf4j-jdk14-1.7.9.jar=lib/slf4j-jdk14-1.7.9.jar
 includes=**
@@ -53,8 +54,8 @@ javac.classpath=\
     ${file.reference.flexdock-1.2.4.jar}:\
     ${file.reference.slf4j-api-1.7.9.jar}:\
     ${file.reference.slf4j-jdk14-1.7.9.jar}:\
-    ${reference.nlink-logic.jar}:\
     ${file.reference.jlibgraph.jar}:\
+    ${file.reference.nlink-logic.jar}:\
     ${file.reference.commons-configuration2-2.7.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
@@ -102,8 +103,6 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.license=gpl30
-project.nlink-logic=../nlink-logic
-reference.nlink-logic.jar=${project.nlink-logic}/dist/nlink-logic.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
